cabal-version: 3.0

name: mitchellpass
version: 0

executable mitchellpass
  build-depends:
    aeson,
    base,
    base64,
    bytestring,
    cryptonite,
    memory,
    text,
    unordered-containers,
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -threaded
  main-is:
    Main.hs
